--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,49 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.App{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(#e66465, #9198e5);
   min-height: 100vh;
+}
+.LoginCard{
   display: flex;
   flex-direction: column;
-  align-items: center;
+border-radius: 10px;
+padding: 30px;
+background: linear-gradient(#FCC4C4, #B4B3F6);
+
+}
+.input{
+  margin-top: 20px;
+}
+.header{
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
+}
+.button{
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+
 }
 
-.App-link {
-  color: #61dafb;
+.font{
+  font-size: 30px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.signUp{
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.signUpText{
+  color: blue;
 }
